--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@aspnet/signalr": "^1.0.4",
     "@types/howler": "^2.0.2",
     "angular-6-social-login": "^1.1.1",
     "angular-audio": "^1.7.3",
