--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/howler": "^2.0.2",
     "angular-6-social-login": "^1.1.1",
     "angular-audio": "^1.7.3",
+    "angular-progress-bar": "^1.0.9",
     "core-js": "^2.5.4",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.2.0",
