--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-progress-bar": "^1.0.9",
     "core-js": "^2.5.4",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-cookie-service": "^2.0.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
